[project]
name = "llm"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "torch>=2.4.1",
    "transformers>=4.44.2",
    "pathlib>=1.0.1",
    "hydra-core>=1.3.2",
    "matplotlib-fontja>=1.0.0",
    "ipykernel>=6.29.5",
]

[tool.setuptools]
packages = { find = { include = ["exp"] } }
